# crawjud-ui

./: .coveragerc  .gitignore  LICENSE  README.md  compose.yml  eslint.config.mts  forge.config.ts  jsdoc.json  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/instructions/: doc-javascript.instructions.md  doc-markdown.instructions.md  doc-python.instructions.md  python-fixes.instructions.md  pythondocs.instructions.md  store-returns.instructions.md
.github/prompts/: doc-generation.prompt.md
api/: __init__.py  __main__.py
api/_forms/: __init__.py  file_auth.py  head.py  multiple_files.py  only_auth.py  only_file.py
api/base/: __init__.py  _tst.py
api/config/: __init__.py  settings.yaml
api/constants/: __init__.py
api/decorators/: README.md  __init__.py  _api.py
api/extensions/: __init__.py  _minio.py
api/interfaces/: __init__.py
api/models/: __init__.py  _bot.py  _jwt.py  _users.py  export.json
api/resources/: __init__.py
api/routes/: __init__.py  bots.py
api/types_app/: __init__.py
app/: app.vue
app/electron/: deep.ts  (+5 more)
chrome-extensions/: keepass.crx  websigner.crx
docs/: CODE_OF_CONDUCT.md  LICENSE  PROJECT_STRUCTURE.md  SECURITY.md
electron/: deep.ts  ipcMain.ts
home-ui/: README.md  index.html  pnpm-lock.yaml
makers/: SquirrelMaker.ts  WixMaker.ts
plugins/: NuxtFixes.ts  ViteForgePlugin.ts
scripts/: __init__.py  copy_nuxt_public.py  fix_nuxt_paths.py
task_manager/: __init__.py  __main__.py  _hook.py
(+319 files in other folders)
